log/Laser_DAQ_Camera_App_log_190215_130147.txt
2019-02-15T13:01:47|CRITICAL|root|Unhandled exception:Traceback (most recent call last):
  File "C:\LabPrograms\Python\DAQ-Laser-Camera\Laser_DAQ_Camera_App.py", line 37, in <module>
    app = Laser_DAQ_Camera_App(sys.argv)
  File "C:\LabPrograms\Python\BaseMicroscopeModified_ScopeFoundry\BaseMicroscopeAppModified.py", line 16, in __init__
    super().__init__(*kwds) # *kwds is needed since in the main we pass as argument sys.argv. Without
  File "C:\ProgramData\Anaconda3\lib\site-packages\ScopeFoundry\base_app.py", line 332, in __init__
    self.setup()
  File "C:\LabPrograms\Python\DAQ-Laser-Camera\Laser_DAQ_Camera_App.py", line 25, in setup
    from SyncreadoutTriggerMeasurement import SyncreadoutTriggerMeasurement
  File "C:\LabPrograms\Python\DAQ-Laser-Camera\SyncreadoutTriggerMeasurement.py", line 224
    self.start_triggered_counter_task(self.ni_co_1, initial_delay=0.0000, freq1, duty_cycle=0.5)
                                                                         ^
SyntaxError: positional argument follows keyword argument

